[gd_scene load_steps=3 format=3 uid="uid://da0s2eheuvxnp"]

[ext_resource type="Script" uid="uid://dpe1n8bu225t2" path="res://scripts/utilities/csv/deck_view.gd" id="1_6utdp"]
[ext_resource type="Script" uid="uid://bo0prngwomw5t" path="res://scripts/utilities/csv/deck_view_content.gd" id="2_alk3y"]

[node name="DeckView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6utdp")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_alk3y")

[node name="Info" type="HBoxContainer" parent="Content"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Content/Info"]
layout_mode = 2
text = "Back"

[node name="Course" type="OptionButton" parent="Content/Info"]
layout_mode = 2
selected = 0
item_count = 8
popup/item_0/text = "Manajemen Proyek Perangkat Lunak"
popup/item_0/id = 0
popup/item_1/text = "Jaringan Komputer"
popup/item_1/id = 1
popup/item_2/text = "Keamanan Siber"
popup/item_2/id = 2
popup/item_3/text = "Pemrograman Web 1"
popup/item_3/id = 3
popup/item_4/text = "Mobile Programming"
popup/item_4/id = 4
popup/item_5/text = "Metodologi Riset"
popup/item_5/id = 5
popup/item_6/text = "Computer Vision"
popup/item_6/id = 6
popup/item_7/text = "Pengolahan Citra Digital"
popup/item_7/id = 7

[node name="SearchBar" type="LineEdit" parent="Content"]
layout_mode = 2
placeholder_text = "Search things..."

[node name="Sort" type="HBoxContainer" parent="Content"]
layout_mode = 2

[node name="SortBy" type="OptionButton" parent="Content/Sort"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "None"
popup/item_0/id = 0

[node name="SortOrder" type="OptionButton" parent="Content/Sort"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Ascending"
popup/item_1/id = 1
popup/item_2/text = "Descending"
popup/item_2/id = 2

[node name="Table" type="Tree" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
column_titles_visible = true
hide_root = true

[node name="Utilities" type="HBoxContainer" parent="Content"]
layout_mode = 2
alignment = 2

[node name="UnmarkAll" type="Button" parent="Content/Utilities"]
layout_mode = 2
text = "Unmark all"
